--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,7 @@
         <div class="header-div">
           <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
           <a class="header-contact" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+            >info@devstudio.com</a>
         </div>
       </div>
     </header>
