--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         </nav>
         <div class="header-div">
           <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
+          <svg>
+            <use href="./images/icons.svg/symbol-defs-15(1).svg"></use>
+          </svg>
           <a class="header-contact" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
