--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
           </ul>
         </nav>
         <div class="header-div">
-          <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
-          <a class="header-contact" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+          <a class="header-contact" href="mailto:info@devstudio.com">
+            <svg class="header-icon" width="16px" height="12px">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a>
+            <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
         </div>
       </div>
     </header>
