--- a/index.html
+++ b/index.html
@@ -41,13 +41,21 @@
             </li>
           </ul>
         </nav>
-        <div class="header-div">
-          <a class="header-contact" href="mailto:info@devstudio.com">
-            <svg class="header-icon" width="16px" height="12px">
-              <use href="./images/icons.svg#icon-envelope"></use>
-            </svg>info@devstudio.com</a>
-            <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
-        </div>
+        <ul class="header-ul">
+          <li class="header-icon-li">
+            <a class="header-contact" href="mailto:info@devstudio.com">
+              <svg class="header-icon" width="16px" height="12px">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="header-contact" href="tel:+48111111111">
+              <svg class="header-icon" width="10px" height="16px">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>+48 111 111 111</a>
+             
+          </li>
+        </ul>
       </div>
     </header>
 
@@ -138,8 +146,8 @@
                 height="260"
               />
               <div class="under-photo">
-              <h3 class="photo-name">John Doe</h3>
-              <p class="work-position">Product Designer</p>
+                <h3 class="photo-name">John Doe</h3>
+                <p class="work-position">Product Designer</p>
               </div>
             </li>
             <li class="our-team-frame">
@@ -150,8 +158,8 @@
                 height="260"
               />
               <div class="under-photo">
-              <h3 class="photo-name">John Doe</h3>
-              <p class="work-position">Frontend Developer</p>
+                <h3 class="photo-name">John Doe</h3>
+                <p class="work-position">Frontend Developer</p>
               </div>
             </li>
             <li class="our-team-frame">
@@ -162,8 +170,8 @@
                 height="260"
               />
               <div class="under-photo">
-              <h3 class="photo-name">John Doe</h3>
-              <p class="work-position">Marketing</p>
+                <h3 class="photo-name">John Doe</h3>
+                <p class="work-position">Marketing</p>
               </div>
             </li>
             <li class="our-team-frame">
@@ -174,9 +182,88 @@
                 height="260"
               />
               <div class="under-photo">
-              <h3 class="photo-name">John Doe</h3>
-              <p class="work-position">UI Designer</p>
+                <h3 class="photo-name">John Doe</h3>
+                <p class="work-position">UI Designer</p>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+       <section class="clients-section">
+        <div class="container">
+          <h2 class="our-clients-h2">Nasi klienci</h2>
+          <ul class="client-icon-block">
+            <li>
+                <div class="client-icon-div">
+                  <svg
+                    class="client-icon icon-logo-0"
+                    width="41px"
+                    height="46.7px"
+                  >
+                    <use href="./images/icons.svg#icon-logo-0"></use>
+                  </svg>
+                </div>
+            </li>
+            <li>
+             <div class="client-icon-div">
+                  <svg
+                    class="client-icon icon-logo-1"
+                    width="40px"
+                    height="52px"
+                  >
+                    <use href="./images/icons.svg#icon-logo-1"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li>
+            <div class="client-icon-div">
+                  <svg
+                    class="client-icon icon-logo-2"
+                    width="43.46px"
+                    height="41.18px"
+                  >
+                    <use href="./images/icons.svg#icon-logo-2"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li>
+              <div class="client-icon-div">
+                  <svg
+                    class="client-icon icon-logo-3"
+                    width="84.44px"
+                    height="40.62px"
+                  >
+                    <use href="./images/icons.svg#icon-logo-3"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li>
+              <div class="client-icon-div">
+                  <svg
+                    class="client-icon icon-logo-4"
+                    width="62.54px"
+                    height="60.04px"
+                  >
+                    <use href="./images/icons.svg#icon-logo-4"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li>
+             <div class="client-icon-div">
+                  <svg
+                    class="client-icon icon-logo-5"
+                    width="93.79px"
+                    height="43.93px"
+                  >
+                    <use href="./images/icons.svg#icon-logo-5"></use>
+                  </svg>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -185,29 +272,59 @@
 
     <footer>
       <div class="container">
-      <a href="./index.html" class="logo-web-footer"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <address class="footer-address">
-        <ul>
-          <li class="footer-between">
-            <a
-              class="footer-link"
-              href="address:m.warszawa,alejejerozolimskie21"
-              >m. Warszawa, Aleje Jerozolimskie 21</a
-            >
-          </li>
-          <li class="footer-between">
-            <a class="footer-link2" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="footer-between">
-            <a class="footer-link2" href="tel:+48111111111">+48 111 111 111</a>
-          </li>
-        </ul>
+        <a href="./index.html" class="logo-web-footer"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <address class="footer-address">
+          <ul>
+            <li class="footer-between">
+              <a
+                class="footer-link"
+                href="address:m.warszawa,alejejerozolimskie21"
+                >m. Warszawa, Aleje Jerozolimskie 21</a
+              >
+            </li>
+            <li class="footer-between">
+              <a class="footer-link2" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="footer-between">
+              <a class="footer-link2" href="tel:+48111111111"
+                >+48 111 111 111</a
+              >
+            </li>
+          </ul>
+            </div>
+        </address>
+        <div class="footer-icon-block-2">
+          <section class="footer-icon-block">
+            <h3 class="join-us-h3">DOŁĄCZ DO NAS</h3>
+            <ul class="footer-social-media">
+              <li class="footer-icon-li">
+                <svg width="44px" height="44px">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="footer-icon-li">
+                <svg class="footer-icon" width="44px" height="44px">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="footer-icon-li">
+                <svg class="footer-icon" width="44px" height="44px">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="footer-icon-li">
+                <svg class="footer-icon" width="44px" height="44px">
+                  <use href="./images/icons.svg#icon-linkedIn"></use>
+                </svg>
+              </li>
+            </ul>
+          </section>
         </div>
-      </address>
+    
     </footer>
   </body>
 </html>
