--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         <ul class="header-ul">
           <li class="header-icon-li">
             <a class="header-contact" href="mailto:info@devstudio.com">
-              <svg class="header-icon" width="16px" height="12px">
+              <svg
+              class="header-icon" 
+              width="16px"
+              height="12px">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>info@devstudio.com</a>
           </li>
@@ -197,7 +200,7 @@
             <li>
                 <div class="client-icon-div">
                   <svg
-                    class="client-icon icon-logo-0"
+                    class="client-icon"
                     width="41px"
                     height="46.7px"
                   >
@@ -208,7 +211,7 @@
             <li>
              <div class="client-icon-div">
                   <svg
-                    class="client-icon icon-logo-1"
+                    class="client-icon"
                     width="40px"
                     height="52px"
                   >
@@ -220,7 +223,7 @@
             <li>
             <div class="client-icon-div">
                   <svg
-                    class="client-icon icon-logo-2"
+                    class="client-icon"
                     width="43.46px"
                     height="41.18px"
                   >
@@ -232,7 +235,7 @@
             <li>
               <div class="client-icon-div">
                   <svg
-                    class="client-icon icon-logo-3"
+                    class="client-icon"
                     width="84.44px"
                     height="40.62px"
                   >
@@ -244,7 +247,7 @@
             <li>
               <div class="client-icon-div">
                   <svg
-                    class="client-icon icon-logo-4"
+                    class="client-icon"
                     width="62.54px"
                     height="60.04px"
                   >
@@ -256,7 +259,7 @@
             <li>
              <div class="client-icon-div">
                   <svg
-                    class="client-icon icon-logo-5"
+                    class="client-icon"
                     width="93.79px"
                     height="43.93px"
                   >
