--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
           </li>
           <li>
             <a class="header-contact" href="tel:+48111111111">
-              <svg class="header-icon" width="10px" height="16px">
+              <svg
+              class="header-icon"
+              width="10px"
+              height="16px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>+48 111 111 111</a>
              
