--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
       <section class="section">
         <div class="container">
           <ul class="lorem-section">
-            <li>
+            <li class="lorem-picture">
+              <svg
+              width="270px"
+              height="120px">
+                <use href="./images/icons.svg#icon-aerial"></use>
+              </svg>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -85,21 +90,36 @@
               </p>
             </li>
 
-            <li>
+            <li class="lorem-picture">
+              <svg
+               width="270px"
+              height="120px">
+                <use href="./images/icons.svg#icon-clock-1"></use>
+              </svg>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="lorem-picture">
+              <svg
+               width="270px"
+              height="120px">
+                <use href="./images/icons.svg#icon-diagram-1"></use>
+              </svg>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="lorem-picture">
+              <svg
+              width="270px"
+              height="120px">
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
+              </svg>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
