--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
       <section class="section">
         <div class="container">
           <ul class="lorem-section">
-            <li class="lorem-picture">
-              <svg
+            <li class="lorem-block">
+              <svg 
+              class="lorem-icon"
               width="70px"
               height="70px">
                 <use href="./images/icons.svg#icon-aerial"></use>
@@ -90,8 +91,9 @@
               </p>
             </li>
 
-            <li class="lorem-picture">
+            <li class="lorem-block">
               <svg
+              class="lorem-icon"
                width="70px"
               height="70px">
                 <use href="./images/icons.svg#icon-clock-1"></use>
@@ -102,8 +104,9 @@
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="lorem-picture">
+            <li class="lorem-block">
               <svg
+              class="lorem-icon"
                width="70px"
               height="70px">
                 <use href="./images/icons.svg#icon-diagram-1"></use>
@@ -114,8 +117,9 @@
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="lorem-picture">
+            <li class="lorem-block">
               <svg
+              class="lorem-icon"
               width="70px"
               height="70px">
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
