--- a/index.html
+++ b/index.html
@@ -178,6 +178,13 @@
               <div class="under-photo">
                 <h3 class="photo-name">John Doe</h3>
                 <p class="work-position">Product Designer</p>
+                <ul class="our-team-media">
+                  <li>
+                    <svg>
+                      <use></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-frame">
