--- a/index.html
+++ b/index.html
@@ -84,11 +84,13 @@
               height="70px">
                 <use href="./images/icons.svg#icon-aerial"></use>
               </svg>
+              <div class="lorem-gap">
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
+              </div>
             </li>
 
             <li class="lorem-block">
@@ -98,12 +100,15 @@
               height="70px">
                 <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
+              <div class="lorem-gap">
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
+              </div>
             </li>
+
             <li class="lorem-block">
               <svg
               class="lorem-icon"
@@ -111,12 +116,15 @@
               height="70px">
                 <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
+              <div class="lorem-gap">
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
+              </div>
             </li>
+
             <li class="lorem-block">
               <svg
               class="lorem-icon"
@@ -124,12 +132,15 @@
               height="70px">
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
+              <div class="lorem-gap">
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
+              </div>
             </li>
+
           </ul>
         </div>
       </section>
