--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </li>
           </ul>
         </nav>
-        <ul class="header-ul">
-          <li class="header-icon-li">
+        <ul class="header-mail-tel">
+          <li class="header-mail-box">
             <a class="header-contact" href="mailto:info@devstudio.com">
               <svg
               class="header-icon" 
@@ -51,7 +51,7 @@
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>info@devstudio.com</a>
           </li>
-          <li>
+          <li class="header-tel-box">
             <a class="header-contact" href="tel:+48111111111">
               <svg
               class="header-icon"
