--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               height="70px">
                 <use href="./images/icons.svg#icon-aerial"></use>
               </svg>
-              <div class="lorem-gap">
+              <div>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -100,7 +100,7 @@
               height="70px">
                 <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
-              <div class="lorem-gap">
+              <div>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -116,7 +116,7 @@
               height="70px">
                 <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
-              <div class="lorem-gap">
+              <div>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -132,7 +132,7 @@
               height="70px">
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
-              <div class="lorem-gap">
+              <div>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
