--- a/index.html
+++ b/index.html
@@ -187,6 +187,69 @@
               <div class="under-photo">
                 <h3 class="photo-name">John Doe</h3>
                 <p class="work-position">Product Designer</p>
+                 <ul class="social-media">
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-icons-likns">
+                      <svg
+                        class="social-icon"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-icons-likns">
+                      <svg
+                        class="social-icon"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-icons-likns">
+                      <svg
+                        class="social-icon"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-linkedIn"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </li>
                 <ul class="our-team-media">
                   <li>
                     <svg>
