--- a/portfolio.html
+++ b/portfolio.html
@@ -42,11 +42,26 @@
             </li>
           </ul>
         </nav>
-        <div class="header-div">
-          <a class="header-contact" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a>
-            <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
-        </div>
+        <ul class="header-mail-tel">
+        <li class="header-mail-box">
+          <a class="header-contact" href="mailto:info@devstudio.com">
+            <svg
+             class="header-icon" 
+              width="16px"
+              height="12px">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a>
+          </li>
+          <li class="header-tel-box">
+            <a class="header-contact" href="tel:+48111111111">
+               <svg
+              class="header-icon"
+              width="10px"
+              height="16px">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+               </svg>+48 111 111 111</a>
+       </li>
+        </ul>
       </div>
     </header>
 
