--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
               <div class="under-photo">
                 <h3 class="photo-name">John Doe</h3>
                 <p class="work-position">Product Designer</p>
+                </div>
                  <ul class="social-media">
                 <li>
                   <a href="#"
@@ -205,9 +206,9 @@
                 </li>
                 <li>
                   <a href="#"
-                    ><div class="social-icons-likns">
+                    ><div class="social-media-icons">
                       <svg
-                        class="social-icon"
+                        class="media-icons"
                         width="20px"
                         height="20px"
                       >
@@ -220,9 +221,9 @@
                 </li>
                 <li>
                   <a href="#"
-                    ><div class="social-icons-likns">
+                    ><div class="social-media-icons">
                       <svg
-                        class="social-icon"
+                        class="media-icons"
                         width="20px"
                         height="20px"
                       >
@@ -235,9 +236,9 @@
                 </li>
                 <li>
                   <a href="#"
-                    ><div class="social-icons-likns">
+                    ><div class="social-media-icons">
                       <svg
-                        class="social-icon"
+                        class="media-icons"
                         width="20px"
                         height="20px"
                       >
@@ -250,15 +251,7 @@
                 </li>
               </ul>
             </li>
-                <ul class="our-team-media">
-                  <li>
-                    <svg>
-                      <use></use>
-                    </svg>
-                  </li>
-                </ul>
-              </div>
-            </li>
+                
             <li class="our-team-frame">
               <img
                 src="./images/img(2).jpg"
@@ -270,6 +263,69 @@
                 <h3 class="photo-name">John Doe</h3>
                 <p class="work-position">Frontend Developer</p>
               </div>
+ <ul class="social-media">
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-linkedIn"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </li>
             </li>
             <li class="our-team-frame">
               <img
@@ -282,6 +338,70 @@
                 <h3 class="photo-name">John Doe</h3>
                 <p class="work-position">Marketing</p>
               </div>
+               <ul class="social-media">
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-linkedIn"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            </li>
             </li>
             <li class="our-team-frame">
               <img
@@ -294,6 +414,70 @@
                 <h3 class="photo-name">John Doe</h3>
                 <p class="work-position">UI Designer</p>
               </div>
+               <ul class="social-media">
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><div class="social-media-icons">
+                      <svg
+                        class="media-icons"
+                        width="20px"
+                        height="20px"
+                      >
+                        <use
+                          href="./images/icons.svg#icon-linkedIn"
+                        ></use>
+                      </svg>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            </li>
             </li>
           </ul>
         </div>
