--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
                 </div>
                  <ul class="social-media">
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -204,9 +203,9 @@
                     </div>
                   </a>
                 </li>
+
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -220,8 +219,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -235,8 +233,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -263,10 +260,9 @@
                 <h3 class="photo-name">John Doe</h3>
                 <p class="work-position">Frontend Developer</p>
               </div>
- <ul class="social-media">
+                <ul class="social-media">
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -280,8 +276,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -295,8 +290,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -310,8 +304,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -325,7 +318,6 @@
                   </a>
                 </li>
               </ul>
-            </li>
             </li>
             <li class="our-team-frame">
               <img
@@ -340,8 +332,7 @@
               </div>
                <ul class="social-media">
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -355,8 +346,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -370,8 +360,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -385,8 +374,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -400,8 +388,6 @@
                   </a>
                 </li>
               </ul>
-            </li>
-            </li>
             </li>
             <li class="our-team-frame">
               <img
@@ -416,8 +402,7 @@
               </div>
                <ul class="social-media">
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -431,8 +416,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -446,8 +430,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -461,8 +444,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><div class="social-media-icons">
+                    <div class="social-media-icons">
                       <svg
                         class="media-icons"
                         width="20px"
@@ -476,8 +458,6 @@
                   </a>
                 </li>
               </ul>
-            </li>
-            </li>
             </li>
           </ul>
         </div>
