--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <svg
               class="header-icon"
               width="12px"
-              height="18px">
+              height="10px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>+48 111 111 111</a>
              
@@ -77,61 +77,63 @@
       <section class="section">
         <div class="container">
           <ul class="lorem-section">
-            <li class="lorem-block">
+            <li>
+            <div class="lorem-block">
               <svg 
               class="lorem-icon"
               width="70px"
               height="70px">
                 <use href="./images/icons.svg#icon-aerial"></use>
               </svg>
-              <div>
+               </div>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
-              </div>
             </li>
 
-            <li class="lorem-block">
-              <svg
+            <li>
+              <div class="lorem-block">
+                <svg
               class="lorem-icon"
                width="70px"
               height="70px">
                 <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
-              <div>
+              </div>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
-              </div>
             </li>
 
-            <li class="lorem-block">
-              <svg
+            <li>
+                <div class="lorem-block">
+                  <svg
               class="lorem-icon"
                width="70px"
               height="70px">
                 <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
-              <div>
+               </div>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
-              </div>
             </li>
 
-            <li class="lorem-block">
-              <svg
+            <li>
+              <div class="lorem-block">
+                <svg
               class="lorem-icon"
               width="70px"
               height="70px">
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
             </svg>
+            </div>
               <h2 class="lorem-h2">LOREM IPSUM</h2>
               <p class="paragraph-lorem">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
